8005418: JSR 292: virtual dispatch bug in 292 impl

Reviewed-by: jrose, kvn